adding portfolio pictures responsive

--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
         <div class="links">
           <div class="link-item">
             <i class="fas fa-portrait"></i>
-            <a href="YoungPorf.html">About Me</a>
+            <a href="index.html">About Me</a>
           </div>
           <div class="link-item">
             <i class="fas fa-portrait"></i>
@@ -40,7 +40,7 @@
         </div> <!-- end links -->
 
       </div>
-</body>
+
 </section>
 <div class="section-title">Contact</div>
 <br />
@@ -60,5 +60,13 @@
 
   </form>
 </div>
+</body>
+<!-- <!<div class="wrapper">
+
+  content
+
+<div class="push"></div>
+</div>
+<footer class="footer"></footer> -->
 
 </html>
