--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,8 +6,11 @@
   <title>Young Cho Profile</title>
   <link rel="stylesheet" href="reset.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="portf.css">
 
 </head>
 
@@ -25,7 +28,7 @@
         <div class="links">
           <div class="link-item">
             <i class="fas fa-portrait"></i>
-            <a href="YoungPorf.html">About Me</a>
+            <a href="index.html">About Me</a>
           </div>
           <div class="link-item">
             <i class="fas fa-portrait"></i>
@@ -39,23 +42,48 @@
         </div> <!-- end links -->
 
       </div>
-</body>
-</section>
-<div class="section-title">Resume</div>
-<br />
-<h1>Quality Assurance Analyst III </h1>
-<p>PROFICIENCY WITH KEEN BUSINESS ACUMEN TO ENSURE FINANCIAL, SYSTEM INTEGRITY AND PERFORMANCE WHILE MINIMIZING ERROR.
-  OBTAINED REPUTATION FOR QUICKLY MASTERING AND SOLVING PROBLEMS IN NEW TECHNOLOGY SKILLS DEVELOPED THROUGH EXPERIENCE.
-  - I love to learn and have earned the reputation as quick to Master New System and Process.
-  - I thrive in an environment that presents me with opportunities to solve problems.
-</p>
-<br>
-<p>At AlixaRX I have had the opportunity to apply my extensive dispensing software, hardware, system, healthcare and
-  pharmaceutical business knowledge since 2010 from AlixaRX and Infopia to troubleshoot hardware and software
-  configurations, automate & manual processes, and identify and record software defects. Utilized Visual Studio Test
-  Professional 2013, TestComplete Automation, SQL server 2012, Baretail, and Pulover’s Macro Tool.</p>
-<section>
+    </section>
 
-</section>
+    <br>
+    <div class="responsive">
+        <div class="gallery">
+            <a target="_blank" href="img/tiger1.jpg">
+                <img src="img/tiger1.jpg" alt="Cinque Terre" width="500px">
+            </a>
+            <div class="desc">Tiger</div>
+        </div>
+    </div>
+
+    <div class="responsive">
+        <div class="gallery">
+            <a target="_blank" href="img/tiger2.jpg">
+                <img src="img/tiger2.jpg" alt="Cinque Terre" width="500px">
+            </a>
+            <div class="desc">white tiger</div>
+        </div>
+    </div>
+
+    <div class="responsive">
+        <div class="gallery">
+            <a target="_blank" href="img/tiger3.jpg">
+                <img src="img/tiger3.jpg" alt="Cinque Terre" width="500px" >
+            </a>
+            <div class="desc">angry tiger</div>
+        </div>
+    </div>
+
+    <div class="responsive">
+        <div class="gallery">
+            <a target="_blank" href="img/tiger4.jpg">
+                <img src="img/tiger4.jpg" alt="Cinque Terre" width="500px" >
+            </a>
+            <div class="desc"> tiger</div>
+        </div>
+    </div>
+    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias ea dignissimos cupiditate, eos quam minima dolore, quod, animi nulla nihil nobis labore. Ullam non harum minus quis repudiandae laudantium!</P>
+    
+
+</div>
+</body>
 
 </html>
