making changes to file names

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -48,7 +48,7 @@
     <div class="responsive">
         <div class="gallery">
             <a target="_blank" href="img/tiger1.jpg">
-                <img src="img/tiger1.jpg" alt="Cinque Terre" width="500px">
+                <img src="img/tiger1.jpg" alt="Tiger" width="500px">
             </a>
             <div class="desc">Tiger</div>
         </div>
@@ -57,7 +57,7 @@
     <div class="responsive">
         <div class="gallery">
             <a target="_blank" href="img/tiger2.jpg">
-                <img src="img/tiger2.jpg" alt="Cinque Terre" width="500px">
+                <img src="img/tiger2.jpg" alt="white tiger" width="500px">
             </a>
             <div class="desc">white tiger</div>
         </div>
@@ -66,7 +66,7 @@
     <div class="responsive">
         <div class="gallery">
             <a target="_blank" href="img/tiger3.jpg">
-                <img src="img/tiger3.jpg" alt="Cinque Terre" width="500px" >
+                <img src="img/tiger3.jpg" alt="Angry Tiger" width="500px" >
             </a>
             <div class="desc">angry tiger</div>
         </div>
@@ -75,9 +75,9 @@
     <div class="responsive">
         <div class="gallery">
             <a target="_blank" href="img/tiger4.jpg">
-                <img src="img/tiger4.jpg" alt="Cinque Terre" width="500px" >
+                <img src="img/tiger4.jpg" alt="running tiger" width="500px" >
             </a>
-            <div class="desc"> tiger</div>
+            <div class="desc">running tiger</div>
         </div>
     </div>
     <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias ea dignissimos cupiditate, eos quam minima dolore, quod, animi nulla nihil nobis labore. Ullam non harum minus quis repudiandae laudantium!</P>
