making changes to file names

--- a/index.html
+++ b/index.html
@@ -47,23 +47,15 @@
     <div>
       <div class="section-title">About Me</div>
       <br />
-      <p>Netlify Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores explicabo nam
-        similique
-        quaerat, porro perferendis adipisci molestias eius dolore eaque, consequatur placeat voluptates consequuntur!
-        Quis
-        quia incidunt aut, repellat aspernatur placeat praesentium vel enim eaque, aperiam, in corrupti tenetur.</p>
+      <p>PROFICIENCY WITH KEEN BUSINESS ACUMEN TO ENSURE FINANCIAL, SYSTEM INTEGRITY AND PERFORMANCE WHILE MINIMIZING ERROR. OBTAINED REPUTATION FOR QUICKLY MASTERING AND SOLVING PROBLEMS IN NEW TECHNOLOGY SKILLS DEVELOPED THROUGH EXPERIENCE.
+
+        </p>
       <br>
-      <p>Netlify Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores explicabo nam
-          similique
-          quaerat, porro perferendis adipisci molestias eius dolore eaque, consequatur placeat voluptates consequuntur!
-          Quis
-          quia incidunt aut, repellat aspernatur placeat praesentium vel enim eaque, aperiam, in corrupti tenetur.</p>
+      <p>-	I love to learn and have earned the reputation as quick to Master New System and Process.<br>
+        -	I thrive in an environment that presents me with opportunities to solve problems.</p>
     </div>
 
-    <!-- Footer -->
-<div class="footer">
-    <p>Resize the browser window to see how the content respond to the resizing.</p>
-  </div>
+
   
 </body>
 </html>
