organize folder structers

--- a/Contact.html
+++ b/Contact.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UFT-8">
   <title>Young Cho Profile</title>
-  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="css/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="stylesheet" href="style.css">
-
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/portf.css" />
 </head>
 
 <body>
@@ -41,25 +42,25 @@
 
       </div>
 
-</section>
-<div class="section-title">Contact</div>
-<br />
-<p>Please Contact me with any questions or concerns</p><br>
+    </section>
+    <div class="section-title">Contact</div>
+    <br />
+    <p>Please Contact me with any questions or concerns</p><br>
 
 
-<!--Contact-US Form-->
-<div class="contact-form">
-  <form id="contact-form" method="post" action="" contact-form-handler.php>
-    <input name="name" type="text" class="form-control" placeholder="Your Name" required><br>
+    <!--Contact-US Form-->
+    <div class="contact-form">
+      <form id="contact-form" method="post" action="" contact-form-handler.php>
+        <input name="name" type="text" class="form-control" placeholder="Your Name" required><br>
 
-    <input name="Email" type="text" class="form-control" placeholder="Your Email" required><br>
+        <input name="Email" type="text" class="form-control" placeholder="Your Email" required><br>
 
-    <textarea name="Message" type="text" class="form-control" placeholder="Message" rows="4" required></textarea>
+        <textarea name="Message" type="text" class="form-control" placeholder="Message" rows="4" required></textarea>
 
-    <input type="submit" class="form-control submit" value="SEND MESSAGE">
+        <input type="submit" class="form-control submit" value="SEND MESSAGE">
 
-  </form>
-</div>
+      </form>
+    </div>
 </body>
 <!-- <!<div class="wrapper">
 
