--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,89 +1,92 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UFT-8">
-  <title>Young Cho Profile</title>
-  <link rel="stylesheet" href="reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="portf.css">
-
+    <meta charset="UFT-8" />
+    <title>Young Cho Profile</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/portf.css" />
+    
 </head>
 
 <body>
+    <div class="container">
+        <section>
+            <div>
+                <div>
+                    <img src="img/YoungCho.jpg" alt="YoungCho" class="YoungCho" />
+                </div>
+            </div>
+            <div>
+                <div class="my-name">Yong Cho</div>
+                <br />
+                <div class="my-title">Software Qaulity Engineer</div>
 
-  <div class="container">
-    <section>
-      <div>
-        <div><img src="img/YoungCho.jpg" alt="YoungCho" class="YoungCho"></div>
-      </div>
-      <div>
-        <div class="my-name">Yong Cho</div><br>
-        <div class="my-title">Software Qaulity Engineer</div>
+                <div class="links">
+                    <div class="link-item">
+                        <i class="fas fa-portrait"></i> <a href="index.html">About Me</a>
+                    </div>
+                    <div class="link-item">
+                        <i class="fas fa-portrait"></i>
+                        <a href="Portfolio.html">Portfolio</a>
+                    </div>
 
-        <div class="links">
-          <div class="link-item">
-            <i class="fas fa-portrait"></i>
-            <a href="index.html">About Me</a>
-          </div>
-          <div class="link-item">
-            <i class="fas fa-portrait"></i>
-            <a href="Portfolio.html">Portfolio</a>
-          </div>
+                    <div class="link-item">
+                        <i class="fas fa-portrait"></i> <a href="Contact.html">Contact</a>
+                    </div>
+                </div>
+                <!-- end links -->
+            </div>
+        </section>
 
-          <div class="link-item">
-            <i class="fas fa-portrait"></i>
-            <a href="Contact.html">Contact</a>
-          </div>
-        </div> <!-- end links -->
-
-      </div>
-    </section>
-
-    <br>
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="img/tiger1.jpg">
-                <img src="img/tiger1.jpg" alt="Tiger" width="500px">
-            </a>
-            <div class="desc">Tiger</div>
+        <br />
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="img/tiger1.jpg">
+                    <img src="img/tiger1.jpg" alt="Tiger" width="500px" />
+                </a>
+                <div class="desc">Tiger</div>
+            </div>
         </div>
-    </div>
 
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="img/tiger2.jpg">
-                <img src="img/tiger2.jpg" alt="white tiger" width="500px">
-            </a>
-            <div class="desc">white tiger</div>
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="img/tiger2.jpg">
+                    <img src="img/tiger2.jpg" alt="white tiger" width="500px" />
+                </a>
+                <div class="desc">white tiger</div>
+            </div>
         </div>
-    </div>
 
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="img/tiger3.jpg">
-                <img src="img/tiger3.jpg" alt="Angry Tiger" width="500px" >
-            </a>
-            <div class="desc">angry tiger</div>
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="img/tiger3.jpg">
+                    <img src="img/tiger3.jpg" alt="Angry Tiger" width="500px" />
+                </a>
+                <div class="desc">angry tiger</div>
+            </div>
         </div>
-    </div>
 
-    <div class="responsive">
-        <div class="gallery">
-            <a target="_blank" href="img/tiger4.jpg">
-                <img src="img/tiger4.jpg" alt="running tiger" width="500px" >
-            </a>
-            <div class="desc">running tiger</div>
+        <div class="responsive">
+            <div class="gallery">
+                <a target="_blank" href="img/tiger4.jpg">
+                    <img src="img/tiger4.jpg" alt="running tiger" width="500px" />
+                </a>
+                <div class="desc">running tiger</div>
+            </div>
         </div>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque
+            molestias ea dignissimos cupiditate, eos quam minima dolore, quod, animi
+            nulla nihil nobis labore. Ullam non harum minus quis repudiandae
+            laudantium!
+        </p>
     </div>
-    <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque molestias ea dignissimos cupiditate, eos quam minima dolore, quod, animi nulla nihil nobis labore. Ullam non harum minus quis repudiandae laudantium!</P>
-    
-
-</div>
 </body>
 
 </html>
