--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!Doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="UFT-8">
-  <title>Young Cho Profile</title>
-  <link rel="stylesheet" href="reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="stylesheet" href="style.css">
-
-</head>
+  <head>
+    <meta charset="UFT-8">
+    <title>Young Cho Profile</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/portf.css" />
+  </head>
 
 <body>
 
@@ -47,15 +47,18 @@
     <div>
       <div class="section-title">About Me</div>
       <br />
-      <p>PROFICIENCY WITH KEEN BUSINESS ACUMEN TO ENSURE FINANCIAL, SYSTEM INTEGRITY AND PERFORMANCE WHILE MINIMIZING ERROR. OBTAINED REPUTATION FOR QUICKLY MASTERING AND SOLVING PROBLEMS IN NEW TECHNOLOGY SKILLS DEVELOPED THROUGH EXPERIENCE.
+      <p>PROFICIENCY WITH KEEN BUSINESS ACUMEN TO ENSURE FINANCIAL, SYSTEM INTEGRITY AND PERFORMANCE WHILE MINIMIZING
+        ERROR. OBTAINED REPUTATION FOR QUICKLY MASTERING AND SOLVING PROBLEMS IN NEW TECHNOLOGY SKILLS DEVELOPED
+        THROUGH EXPERIENCE.
 
-        </p>
+      </p>
       <br>
-      <p>-	I love to learn and have earned the reputation as quick to Master New System and Process.<br>
-        -	I thrive in an environment that presents me with opportunities to solve problems.</p>
+      <p>- I love to learn and have earned the reputation as quick to Master New System and Process.<br>
+        - I thrive in an environment that presents me with opportunities to solve problems.</p>
     </div>
 
 
-  
+
 </body>
+
 </html>
