--- a/Contact.html
+++ b/Contact.html
@@ -4,45 +4,48 @@
 <head>
   <meta charset="UFT-8">
   <title>Young Cho Profile</title>
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="assets/css/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/portf.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="asssets/css/portf.css" />
 </head>
 
 <body>
 
   <div class="container">
+    <!-- section starts -->
     <section>
-      <div>
-        <div><img src="img/YoungCho.jpg" alt="YoungCho" class="YoungCho"></div>
-      </div>
-      <div>
-        <div class="my-name">Yong Cho</div><br>
-        <div class="my-title">Software Qaulity Engineer</div>
-
-        <div class="links">
-          <div class="link-item">
-            <i class="fas fa-portrait"></i>
-            <a href="index.html">About Me</a>
-          </div>
-          <div class="link-item">
-            <i class="fas fa-portrait"></i>
-            <a href="Portfolio.html">Portfolio</a>
-          </div>
-
-          <div class="link-item">
-            <i class="fas fa-portrait"></i>
-            <a href="Contact.html">Contact</a>
-          </div>
-        </div> <!-- end links -->
-
-      </div>
-
-    </section>
+        <div>
+          <div><img src="assets/img/YoungCho.jpg" alt="YoungCho" class="YoungCho"></div>
+        </div>
+        <div>
+          <div class="my-name">Yong Cho</div><br>
+          <div class="my-title">Software Qaulity Engineer</div>
+          <!-- Site links-->
+          <div class="links">
+            <div class="link-item">
+              <i class="fas fa-portrait"></i>
+              <a href="index.html">About Me</a>
+            </div>
+            <div class="link-item">
+              <i class="fas fa-camera-retro"></i>
+              <a href="Portfolio.html">Portfolio</a>
+            </div>
+  
+            <div class="link-item">
+              <i class="fas fa-paper-plane"></i>
+              <a href="Contact.html">Contact</a>
+            </div>
+          </div> 
+          <!-- end links -->
+        </div>
+      </section>
+      <!--ended section -->
     <div class="section-title">Contact</div>
     <br />
     <p>Please Contact me with any questions or concerns</p><br>
@@ -57,17 +60,11 @@
 
         <textarea name="Message" type="text" class="form-control" placeholder="Message" rows="4" required></textarea>
 
-        <input type="submit" class="form-control submit" value="SEND MESSAGE">
+        <input class="btn btn-primary" type="submit" value="Submit">
 
       </form>
     </div>
+  </div>
 </body>
-<!-- <!<div class="wrapper">
-
-  content
-
-<div class="push"></div>
-</div>
-<footer class="footer"></footer> -->
 
 </html>
