updating my profile with a link to crystal collectors game

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,48 +17,56 @@
 
 <body>
     <div class="container">
-    <!-- section starts -->
-    <section>
+        <!-- section starts -->
+        <section>
             <div>
-              <div><img src="assets/img/YoungCho.jpg" alt="YoungCho" class="YoungCho"></div>
+                <div><img src="assets/img/YoungCho.jpg" alt="YoungCho" class="YoungCho">
+                </div>
             </div>
             <div>
-              <div class="my-name">Yong Cho</div><br>
-              <div class="my-title">Software Qaulity Engineer</div>
+                <div class="my-name">Yong Cho</div><br>
+                <div class="my-title">Software Qaulity Engineer</div>
 
-              <!-- Site links-->
-              <div class="links">
-                <div class="link-item">
-                  <i class="fas fa-portrait"></i>
-                  <a href="index.html">About Me</a>
+                <!-- Site links-->
+                <div class="links">
+                    <div class="link-item">
+                        <i class="fas fa-portrait"></i>
+                        <a href="index.html">About Me</a>
+                    </div>
+                    <div class="link-item">
+                        <i class="fas fa-camera-retro"></i>
+                        <a href="Portfolio.html">Portfolio</a>
+                    </div>
+
+                    <div class="link-item">
+                        <i class="fas fa-paper-plane"></i>
+                        <a href="Contact.html">Contact</a>
+                    </div>
                 </div>
-                <div class="link-item">
-                  <i class="fas fa-camera-retro"></i>
-                  <a href="Portfolio.html">Portfolio</a>
-                </div>
-      
-                <div class="link-item">
-                  <i class="fas fa-paper-plane"></i>
-                  <a href="Contact.html">Contact</a>
-                </div>
-              </div> 
-              <!-- end links -->
-    
+                <!-- end links -->
+
             </div>
-          </section>
-          <!--ended section -->
+        </section>
+        <!--ended section -->
 
         <br />
-        <div class="responsive">
+
+        <div class="container">
             <div class="gallery">
-                <a target="_blank" href="assets/img/tiger1.jpg">
-                    <img src="assets/img/tiger1.jpg" alt="Tiger" width="500px" />
+                <a target="_blank" href="https://youngtae1386.github.io/unit-4-game/">
+                    <img src="assets/img/crystalCollectGame.png" alt="Tiger" width="500px" />
                 </a>
-                <div class="desc">Tiger</div>
+                <div class="desc">Crystal Collector Game</div>
+
             </div>
+            <p>By clicking on a crystal, you will add a specific amount of points to your total score.
+                You win the game by matching your total score to the Random Generator.
+                You lose the game if your total score goes above the Random Generator.
+                The value of each crystal is hidden from you until you click on it.
+                Each time when the game starts, the game will change the values of each crystal.</p>
         </div>
 
-        <div class="responsive">
+        <div class="container">
             <div class="gallery">
                 <a target="_blank" href="assets/img/tiger2.jpg">
                     <img src="assets/img/tiger2.jpg" alt="white tiger" width="500px" />
@@ -67,7 +75,7 @@
             </div>
         </div>
 
-        <div class="responsive">
+        <div class="container">
             <div class="gallery">
                 <a target="_blank" href="assets/img/tiger3.jpg">
                     <img src="assets/img/tiger3.jpg" alt="Angry Tiger" width="500px" />
@@ -76,7 +84,7 @@
             </div>
         </div>
 
-        <div class="responsive">
+        <div class="container">
             <div class="gallery">
                 <a target="_blank" href="assets/img/tiger4.jpg">
                     <img src="assets/img/tiger4.jpg" alt="running tiger" width="500px" />
