--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UFT-8">
+  <meta charset="UFT-8" />
   <title>Young Cho Profile</title>
-  <link rel="stylesheet" href="assets/css/reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/portf.css" />
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/portf.css" />
 </head>
 
 <body>
-
   <!-- container starts -->
   <div class="container">
     <!-- section starts -->
     <section>
       <div>
-        <div><img src="assets/img/YoungCho.jpg" alt="YoungCho" class="YoungCho"></div>
+        <div>
+          <img src="assets/img/YoungCho.jpg" alt="YoungCho" class="YoungCho" />
+        </div>
       </div>
       <div>
-        <div class="my-name">Yong Cho</div><br>
+        <div class="my-name">Yong Cho</div>
+        <br />
         <div class="my-title">Software Qaulity Engineer</div>
         <!-- Site links-->
         <div class="links">
           <div class="link-item">
-            <i class="fas fa-portrait"></i>
-            <a href="index.html">About Me</a>
+            <i class="fas fa-portrait"></i> <a href="index.html">About Me</a>
           </div>
           <div class="link-item">
             <i class="fas fa-camera-retro"></i>
@@ -42,9 +43,8 @@
             <i class="fas fa-paper-plane"></i>
             <a href="Contact.html">Contact</a>
           </div>
-        </div> 
+        </div>
         <!-- end links -->
-
       </div>
     </section>
     <!--ended section -->
@@ -53,19 +53,21 @@
       <!-- section start - about me -->
       <div class="section-title">About Me</div>
       <br />
-      <p>PROFICIENCY WITH KEEN BUSINESS ACUMEN TO ENSURE FINANCIAL, SYSTEM INTEGRITY AND PERFORMANCE WHILE MINIMIZING
-        ERROR. OBTAINED REPUTATION FOR QUICKLY MASTERING AND SOLVING PROBLEMS IN NEW TECHNOLOGY SKILLS DEVELOPED
-        THROUGH EXPERIENCE.
-
+      <p>
+        PROFICIENCY WITH KEEN BUSINESS ACUMEN TO ENSURE FINANCIAL, SYSTEM
+        INTEGRITY AND PERFORMANCE WHILE MINIMIZING ERROR. OBTAINED REPUTATION
+        FOR QUICKLY MASTERING AND SOLVING PROBLEMS IN NEW TECHNOLOGY SKILLS
+        DEVELOPED THROUGH EXPERIENCE.
       </p>
-      <br>
-      <p>- I love to learn and have earned the reputation as quick to Master New System and Process.<br>
-        - I thrive in an environment that presents me with opportunities to solve problems.</p>
+      <br />
+      <p>
+        - I love to learn and have earned the reputation as quick to Master
+        New System and Process.<br />
+        - I thrive in an environment that presents me with opportunities to
+        solve problems.
+      </p>
     </div>
-
-
-
-</div>
+  </div>
 </body>
 
 </html>
