linking the profile and crystal game

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -54,10 +54,9 @@
         <div class="container">
             <div class="gallery">
                 <a target="_blank" href="https://youngtae1386.github.io/unit-4-game/">
-                    <img src="assets/img/crystalCollectGame.png" alt="Tiger" width="500px" />
+                    <img src="assets/img/crystalCollectGame.png" alt="crystal" width="500px" />
+                    <div class="desc">Crystal Collector Game</div>
                 </a>
-                <div class="desc">Crystal Collector Game</div>
-
             </div>
             <p>By clicking on a crystal, you will add a specific amount of points to your total score.
                 You win the game by matching your total score to the Random Generator.
