adding trivia game to porfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -67,11 +67,16 @@
 
         <div class="container">
             <div class="gallery">
-                <a target="_blank" href="assets/img/tiger2.jpg">
-                    <img src="assets/img/tiger2.jpg" alt="white tiger" width="500px" />
+                <a target="_blank" href="https://youngtae1386.github.io/TriviaGame/">
+                    <img src="assets/img/Trivia.jpg" alt="Trivia" width="500px" />
+                    <div class="desc">Universe TriviaGame</div>
                 </a>
-                <div class="desc">white tiger</div>
             </div>
+            <p>By clicking on a crystal, you will add a specific amount of points to your total score.
+                You win the game by matching your total score to the Random Generator.
+                You lose the game if your total score goes above the Random Generator.
+                The value of each crystal is hidden from you until you click on it.
+                Each time when the game starts, the game will change the values of each crystal.</p>
         </div>
 
         <div class="container">
