--- a/Portfolio.html
+++ b/Portfolio.html
@@ -69,14 +69,14 @@
             <div class="gallery">
                 <a target="_blank" href="https://youngtae1386.github.io/TriviaGame/">
                     <img src="assets/img/Trivia.jpg" alt="Trivia" width="500px" />
-                    <div class="desc">Universe TriviaGame</div>
+                    <div class="desc">Universe Trivia Game</div>
                 </a>
             </div>
-            <p>By clicking on a crystal, you will add a specific amount of points to your total score.
-                You win the game by matching your total score to the Random Generator.
-                You lose the game if your total score goes above the Random Generator.
-                The value of each crystal is hidden from you until you click on it.
-                Each time when the game starts, the game will change the values of each crystal.</p>
+            <p>click Here: Start Game, <br>user has 10 seconds per Random Questions to guess & 7 total questions.
+                If time runs out, it will count towards Unanswered Score.
+                Users are allowed to choose one answer per question.
+                Correct Answer will show up between following questions!
+                Final User scores are shown at End of the Game.</p>
         </div>
 
         <div class="container">
