adding GiphyMma to Portfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -81,11 +81,23 @@
 
         <div class="container">
             <div class="gallery">
-                <a target="_blank" href="assets/img/tiger3.jpg">
-                    <img src="assets/img/tiger3.jpg" alt="Angry Tiger" width="500px" />
+                <a target="_blank" href="https://youngtae1386.github.io/Unit-6-Giphy/">
+                    <img src="assets/img/GiphyMma.JPG" alt="Giphy MMA" width="500px" />
+                    <div class="desc">Giphy MMA Search</div>
                 </a>
-                <div class="desc">angry tiger</div>
+
             </div>
+            <p>
+                Click Here: Search Your Gifs, <br> Users can request additional gifs to be added to the page.
+                <br>Each request ADD's 10 gifs to the page.
+                First Search the name of Gifs you want to search.
+                add to the page and than click Add Your MMA Fighter.
+                you can append multiple stars to the same pages.
+                When you click the image it will "Animate" and when you click again it "Stops" the animation. 
+                When User wants to clear all search,"Click"Clear All Search and Remove all previously display Gifs.
+                <br><br>
+                ***Enjoy and Have fun Searching Your Own Gifs***
+            </p>
         </div>
 
         <div class="container">
