adding unit 7 firebase hw to porfolios

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -102,17 +102,16 @@
 
         <div class="container">
             <div class="gallery">
-                <a target="_blank" href="assets/img/tiger4.jpg">
-                    <img src="assets/img/tiger4.jpg" alt="running tiger" width="500px" />
+                <a target="_blank" href="https://youngtae1386.github.io/Unit-7-Firebase/">
+                    <img src="assets/img/trainTime.jpg" alt="Train Time" width="500px" />
                 </a>
-                <div class="desc">running tiger</div>
+                <div class="desc">TrainTime</div>
             </div>
         </div>
         <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque
-            molestias ea dignissimos cupiditate, eos quam minima dolore, quod, animi
-            nulla nihil nobis labore. Ullam non harum minus quis repudiandae
-            laudantium!
+            Current Train Schedule will load from Firebase-DataBase and also you can, 
+            "ADD Train" by filling out Train Name, Destination, First Train Time (HH:mm) 
+            and FruQuency.
         </p>
     </div>
 </body>
