checking updates to homework

--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
   <title>Young Cho Profile</title>
   <link rel="stylesheet" href="assets/css/reset.css" />
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/portf.css" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"
+    integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/"
+    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="crossorigin="anonymous"></script>
 </head>
 
 <body>
+
   <!-- container starts -->
   <div class="container">
+
     <!-- section starts -->
     <section>
       <div>
@@ -26,7 +33,7 @@
         </div>
       </div>
       <div>
-        <div class="my-name">Yong Cho</div>
+        <div class="my-name">Young Cho</div>
         <br />
         <div class="my-title">Software Qaulity Engineer</div>
         <!-- Site links-->
@@ -49,25 +56,78 @@
     </section>
     <!--ended section -->
 
-    <div>
+    <div id="content">
       <!-- section start - about me -->
       <div class="section-title">About Me</div>
-      <br />
       <p>
         PROFICIENCY WITH KEEN BUSINESS ACUMEN TO ENSURE FINANCIAL, SYSTEM
         INTEGRITY AND PERFORMANCE WHILE MINIMIZING ERROR. OBTAINED REPUTATION
         FOR QUICKLY MASTERING AND SOLVING PROBLEMS IN NEW TECHNOLOGY SKILLS
         DEVELOPED THROUGH EXPERIENCE.
       </p>
-      <br />
       <p>
         - I love to learn and have earned the reputation as quick to Master
         New System and Process.<br />
         - I thrive in an environment that presents me with opportunities to
         solve problems.
       </p>
+      <p>
+        <b>Quality Assurance Analyst III</b> (Team Lead, Technical Lead) <br />
+        At AlixaRX, I have had the opportunity to apply my extensive dispensing software, hardware, system, healthcare
+        and pharmaceutical business knowledge since 2010 from AlixaRX and Infopia to troubleshoot hardware and software
+        configurations, automate & manual processes, and identify and record software defects. Utilized Visual Studio
+        Test Professional 2013, TestComplete Automation, SQL server 2012, Baretail, and Pulover’s Macro Tool.
+        <div class="section-title">Team Lead/Technical Lead responsibility and roles: </div>
+        <ul>
+          <li>o Leading team of 4 members, and only senior QA in 15-member scrum team.</li>
+          <li>o Implemented an integrated Test complete automation-UI and Script testing.</li>
+          <li>o Proven the concept to upper management and ROI of purchasing Automation Tool called TestComplete by
+            Softbear.</a></li>
+          <li>o Implemented and created automation testing for acceptance using Test Complete.</li>
+          <li>o Implement and created automation-Scripts to load, back-up DATABASE(SQL) before loading new build into
+            16-Test Environments (saves 15 hours/month.) </li>
+        </ul>
+
+        <p><b> Software Systems:</b><br />
+          Node JS, JavaScript, HTML, CSS, Jquery, Test Complete(Automation), Hospital frameworks and Medication
+          Managment Software, MS Office (Word, Excel, and Power Point), Window 7-10, Adobe Photoshop, Microsoft Visual
+          Studio, Code, Test Professional, VSO, Macro Automation, Microsoft SQL Server and AlixaRX facility/pharmacy
+          applications.</p>
+
+        <div id="social">
+          <a href="https://www.linkedin.com/in/young-cho-800b3997/">
+            <image src="assets\img\LinkedIn.jpg" alt="Name of site">
+          </a>
+          <a href="mailto:youngtae1386@gmail.com">
+            <image src="assets\img\Email.png" alt="Name of site">
+          </a>
+          <a href="javascript:genPDF()">Download/Print PDF</a>
+        </div>
+        
     </div>
-  </div>
-</body>
+    <footer>Plano, Texas • (469) 364-1102 • youngtae1386@gmail.com</footer>
+<div id="editor"></div>
+<button id="cmd">Generate PDF</button>
+
+<script>
+ var doc = new jsPDF();
+ var specialElementHandlers = {
+     '#editor': function (element, renderer) {
+         return true;
+     }
+ };
+
+ $('#content').click(function () {
+     doc.fromHTML($('#content').html(), 15, 15, {
+         'width': 170,
+             'elementHandlers': specialElementHandlers
+     });
+     doc.save('sample-file.pdf');
+ });
+
+ // This code is collected but useful, click below to jsfiddle link.
+</script>
+
+
 
 </html>
